--- a/M4/src/shared/Header/ThreadTitle/threadtitle.css
+++ b/M4/src/shared/Header/ThreadTitle/threadtitle.css
@@ -1,14 +1,16 @@
 .threadTitle {
-  font-size: 2rem;
-  padding: 0 2rem;
-  margin-bottom: 1.5rem;
+  font-weight: normal;
+  padding: 0 20px;
+  font-size: 20px;
+  line-height: 23px;
+  margin: 0 0 15px;
 }
 
 @media all and (min-width: 1024px) {
   .threadTitle {
-    font-size: 2.8rem;
-    order: -1;
-    margin: 0;
-    padding: 0.7rem 0 0 0;
+    padding: 0;
+    margin: 0 27px 0 0;
+    font-size: 28px;
+    line-height: 33px;
   }
 }
