--- a/M4/src/shared/Header/header.css
+++ b/M4/src/shared/Header/header.css
@@ -1,12 +1,14 @@
-.header {
-
-}
-
 @media all and (min-width: 1024px) {
   .header {
-    display: grid;
-    grid-template-columns: 1fr auto;
-    padding: 4rem 4rem 0 4rem;
-    row-gap: 3.1rem;
+    display: flex;
+    flex-flow: row nowrap;
+    align-items: center;
+    padding: 40px;
+  }
+}
+
+@media all and (min-width: 1540px) {
+  .header {
+    padding: 67px 0;
   }
 }
