--- a/M5/src/shared/CardsList/Card/card.css
+++ b/M5/src/shared/CardsList/Card/card.css
@@ -1,10 +1,3 @@
-/*button {*/
-/*  background: transparent;*/
-/*  border: 0;*/
-/*  padding: 0;*/
-/*  cursor: pointer;*/
-/*}*/
-
 .card {
   position: relative;
   background-color: var(--white);
@@ -29,8 +22,8 @@
   .card {
     background-color: transparent;
     flex-flow: row nowrap;
-    max-height: 107px;
-    padding: 0 40px;
+    max-height: 147px;
+    padding: 20px 40px;
   }
   .card > * {
     flex: 0 0;
