--- a/M5/src/shared/CardsList/cardslist.css
+++ b/M5/src/shared/CardsList/cardslist.css
@@ -1,5 +1,11 @@
 @media all and (min-width: 1024px) {
   .cardsList {
+    padding: 20px 0;
+  }
+}
+
+@media all and (min-width: 1540px) {
+  .cardsList {
     padding: 40px 0;
   }
 }
