--- a/M5/src/shared/CardsList/Card/Menu/menu.css
+++ b/M5/src/shared/CardsList/Card/Menu/menu.css
@@ -38,6 +38,7 @@
   display: flex;
   flex-flow: row nowrap;
   align-items: center;
+  cursor: pointer;
 }
 
 .menuItem > span {
@@ -65,6 +66,7 @@
   border-radius: 0 0 3px 3px;
   width: 100%;
   text-align: center;
+  cursor: pointer;
 }
 
 .closeButton span {
