--- a/M6/src/shared/CardsList/Card/Menu/MenuItemsList/menuitemslist.css
+++ b/M6/src/shared/CardsList/Card/Menu/MenuItemsList/menuitemslist.css
@@ -10,22 +10,25 @@
   cursor: pointer;
 }
 
-.menuItem > span {
-  color: var(--grey99);
-}
-
 .menuItem > svg > path {
   fill: var(--grey99);
 }
 
 .menuItem > svg + span {
-  margin-left: 7px;
+  margin-left: 5px;
 }
 
 .divider {
   height: 1px;
+  margin-bottom: -1px;
   width: 100%;
   background-color: var(--greyEC);
+}
+
+@media all and (min-width: 1024px) {
+  .menuItem {
+    padding: 11px 0;
+  }
 }
 
 @media all and (min-width: 1540px) {
