--- a/M6/src/shared/CardsList/Card/Menu/menu.css
+++ b/M6/src/shared/CardsList/Card/Menu/menu.css
@@ -31,15 +31,11 @@
 
 .closeButton {
   background-color: var(--greyD9);
-  padding: 12px 23px;
+  padding: 10px 0;
   border-radius: 0 0 3px 3px;
   width: 100%;
   text-align: center;
   cursor: pointer;
-}
-
-.closeButton span {
-  color: var(--grey66);
 }
 
 @media all and (min-width: 1024px) {
