added max-width for karma-counter

--- a/M8/src/shared/CardsList/Card/Controls/controls.css
+++ b/M8/src/shared/CardsList/Card/Controls/controls.css
@@ -12,6 +12,7 @@ svg.down {
     align-items: center;
     justify-content: center;
     flex-flow: column nowrap;
+    max-width: 25px;
   }
 
   .karmaCounter > * + * {
