--- a/M9/src/shared/CardsList/Card/Menu/MenuItemsList/menuitemslist.css
+++ b/M9/src/shared/CardsList/Card/Menu/MenuItemsList/menuitemslist.css
@@ -25,7 +25,15 @@
   background-color: var(--greyEC);
 }
 
+.mobileHideItem {
+  display: none;
+}
+
 @media all and (min-width: 1024px) {
+  .mobileHideItem {
+    display: flex;
+  }
+
   .menuItem {
     padding: 11px 0;
   }
