--- a/M9/src/shared/main.global.css
+++ b/M9/src/shared/main.global.css
@@ -9,6 +9,7 @@
   --greyF4: hsl(0, 0%, calc(var(--whiteLightness) - 4%));
   --greyF3: hsl(0, 0%, calc(var(--whiteLightness) - 5%));
   --greyEC: hsl(0, 0%, calc(var(--whiteLightness) - 7%));
+  --greyE5: hsl(0, 0%, calc(var(--whiteLightness) - 10%));
   --greyD9: hsl(0, 0%, calc(var(--whiteLightness) - 15%));
   --greyC4: hsl(0, 0%, calc(var(--whiteLightness) - 23%));
   --grey99: hsl(0, 0%, calc(var(--whiteLightness) - 40%));
