--- a/M9/src/shared/CardsList/Card/Menu/MenuItemsList/menuitemslist.css
+++ b/M9/src/shared/CardsList/Card/Menu/MenuItemsList/menuitemslist.css
@@ -27,6 +27,10 @@
 }
 
 @media all and (min-width: 1024px) {
+  .mobileHideItem + .divider {
+    display: revert;
+  }
+
   .mobileHideItem {
     display: flex;
   }
