added comments block in Post

--- a/M9/src/shared/CardsList/Card/Post/post.css
+++ b/M9/src/shared/CardsList/Card/Post/post.css
@@ -95,3 +95,11 @@
   margin-left: auto;
   margin-right: auto;
 }
+
+.notLoggedInBanner {
+  text-align: center;
+}
+
+.notLoggedInLink {
+  color: var(--orange);
+}
