--- a/M9/src/shared/CardsList/Card/MetaData/metadata.css
+++ b/M9/src/shared/CardsList/Card/MetaData/metadata.css
@@ -4,10 +4,18 @@
   align-items: center;
 }
 
+.metaData > :not(:first-child) {
+  padding-left: 6px;
+}
+
 @media all and (min-width: 1024px) {
   .metaData {
-    padding-top: 8px;
     flex-flow: row-reverse nowrap;
     justify-content: flex-end;
+  }
+
+  .metaData > :not(:first-child) {
+    padding-left: unset;
+    padding-right: 5px;
   }
 }
