added loading status for comments added placeholder for comment form with styling added close button for post added new greyAD color

--- a/M9/src/shared/CardsList/Card/Post/CommentForm/commentform.css
+++ b/M9/src/shared/CardsList/Card/Post/CommentForm/commentform.css
@@ -16,13 +16,18 @@
   padding: 16px 18px;
 }
 
-.commentInput::placeholder {
+.commentInputPlaceholder {
+  position: absolute;
+  top: 16px;
+  left: 18px;
   color: var(--orange);
+  pointer-events: none;
 }
 
 .commentForm {
   display: flex;
   flex-flow: row wrap;
+  position: relative;
 }
 
 .commentActions {
