--- a/M9/src/shared/CardsList/Card/Post/CommentsList/CommentItem/commentitem.css
+++ b/M9/src/shared/CardsList/Card/Post/CommentsList/CommentItem/commentitem.css
@@ -9,6 +9,8 @@
   flex-flow: column nowrap;
   align-items: center;
   padding-bottom: 3px;
+  scroll-snap-stop: always;
+  scroll-snap-align: start;
 }
 
 .upVote {
