--- a/M9/src/shared/components/UI/Dropdown/dropdown.css
+++ b/M9/src/shared/components/UI/Dropdown/dropdown.css
@@ -1,16 +1,3 @@
-.container {
-  width: 100%;
-  flex: 1 1 0;
-}
-
-.listContainer {
-  position: relative;
-}
-
-.list {
+.dropdown {
   position: absolute;
-  left: 0;
-  top: 0;
-  width: 100%;
-  height: 100%;
 }
