extract ownComments render logic to separate component visual improvements of CommentForm

--- a/M9/src/shared/CardsList/Card/Post/CommentForm/commentform.css
+++ b/M9/src/shared/CardsList/Card/Post/CommentForm/commentform.css
@@ -20,8 +20,11 @@
   position: absolute;
   top: 16px;
   left: 18px;
-  color: var(--orange);
   pointer-events: none;
+}
+
+.commentInputPlaceholderUsername {
+  color: var(--orange);
 }
 
 .commentForm {
