added uncontrolled comment form fixed not showing own comment when its send before api comments load some visual improvements

--- a/M9/src/shared/CardsList/Card/MetaData/metadata.css
+++ b/M9/src/shared/CardsList/Card/MetaData/metadata.css
@@ -8,6 +8,10 @@
   padding-left: 6px;
 }
 
+.metaData > * {
+  flex-shrink: 0;
+}
+
 @media all and (min-width: 1024px) {
   .metaData {
     flex-flow: row-reverse nowrap;
