--- a/M9/src/shared/CardsList/Card/Menu/menu.css
+++ b/M9/src/shared/CardsList/Card/Menu/menu.css
@@ -21,7 +21,7 @@
 
 .dropdown {
   position: relative;
-  transform: translateX(calc(-50% + 10px));
+  /* transform: translateX(calc(-50% + 10px)); */
   top: 10px;
   box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
   border-radius: 3px;
